@@ -1,3 +1,6 @@
+Changelog 0.3.25 [20230214]:
+- Fixed sub and dub skin bug
+
 Changelog 0.3.24 [20230213]:
 - Fixed a few small bugs
 
